[gd_scene load_steps=20 format=3 uid="uid://cfacjssbdqjqc"]

[ext_resource type="Texture2D" uid="uid://btqmg4p357co" path="res://assets/Sprites/Characters/opossum/opossum-1.png" id="1_mk05r"]
[ext_resource type="Script" path="res://Actors/Enemies/opossum.gd" id="1_oxhok"]
[ext_resource type="Texture2D" uid="uid://ccuw8wdt5aan8" path="res://assets/Sprites/Characters/opossum/opossum-2.png" id="2_pv5vu"]
[ext_resource type="Texture2D" uid="uid://c53kyxvugml1r" path="res://assets/Sprites/Characters/opossum/opossum-3.png" id="3_1va0i"]
[ext_resource type="Texture2D" uid="uid://cwiwsr77jicn1" path="res://assets/Sprites/Characters/opossum/opossum-4.png" id="4_8ofjd"]
[ext_resource type="Texture2D" uid="uid://cljeggq50o06l" path="res://assets/Sprites/Characters/opossum/opossum-5.png" id="5_pfnyl"]
[ext_resource type="Texture2D" uid="uid://b380ohed5r4u7" path="res://assets/Sprites/Characters/opossum/opossum-6.png" id="6_ccxef"]
[ext_resource type="PackedScene" uid="uid://d36xic1t2gcbh" path="res://Components/attack_box_component.tscn" id="7_avg1m"]
[ext_resource type="PackedScene" uid="uid://kktngreqjkox" path="res://Components/hit_box_component.tscn" id="8_87b5g"]
[ext_resource type="PackedScene" uid="uid://b5gugbvrilk8m" path="res://Components/hurt_box_component.tscn" id="9_mxtnp"]

[sub_resource type="SpriteFrames" id="SpriteFrames_kvtxf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_mk05r")
}, {
"duration": 1.0,
"texture": ExtResource("2_pv5vu")
}, {
"duration": 1.0,
"texture": ExtResource("3_1va0i")
}, {
"duration": 1.0,
"texture": ExtResource("4_8ofjd")
}, {
"duration": 1.0,
"texture": ExtResource("5_pfnyl")
}, {
"duration": 1.0,
"texture": ExtResource("6_ccxef")
}],
"loop": true,
"name": &"Move",
"speed": 7.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r5oa8"]
size = Vector2(26, 11)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_no1xx"]
size = Vector2(123, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t5py8"]
size = Vector2(26, 11)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j511b"]
size = Vector2(24, 15)

[sub_resource type="Animation" id="Animation_o0vcn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitBoxComponent/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-3, 8.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DangerDetectorLeft:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-21, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DangerDetectorRight:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(15, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("HurtBoxComponent/CollisionShape2D2:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-3, 6.5)]
}

[sub_resource type="Animation" id="Animation_vljmx"]
resource_name = "move_left"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitBoxComponent/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-3, 8.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DangerDetectorLeft:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-21, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DangerDetectorRight:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(15, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("HurtBoxComponent/CollisionShape2D2:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-3, 6.5)]
}

[sub_resource type="Animation" id="Animation_n1lwn"]
resource_name = "move_right"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitBoxComponent/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(3, 8.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DangerDetectorLeft:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-14, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DangerDetectorRight:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(19, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("HurtBoxComponent/CollisionShape2D2:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 6.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lydco"]
_data = {
"RESET": SubResource("Animation_o0vcn"),
"move_left": SubResource("Animation_vljmx"),
"move_right": SubResource("Animation_n1lwn")
}

[node name="Opossum" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_oxhok")
move_speed = 50.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_kvtxf")
animation = &"Move"
autoplay = "Move"
frame = 4
frame_progress = 0.483614

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3, 8.5)
shape = SubResource("RectangleShape2D_r5oa8")

[node name="AttackBoxComponent" parent="." instance=ExtResource("7_avg1m")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackBoxComponent"]
visible = false
position = Vector2(-2.5, 4)
shape = SubResource("RectangleShape2D_no1xx")
debug_color = Color(0, 0.647059, 0.164706, 0.419608)

[node name="HitBoxComponent" parent="." instance=ExtResource("8_87b5g")]
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxComponent"]
position = Vector2(-3, 8.5)
shape = SubResource("RectangleShape2D_t5py8")
debug_color = Color(0.988235, 0, 0.305882, 0.419608)

[node name="HurtBoxComponent" parent="." instance=ExtResource("9_mxtnp")]
collision_mask = 16

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HurtBoxComponent"]
position = Vector2(-3, 6.5)
shape = SubResource("RectangleShape2D_j511b")
debug_color = Color(0.643137, 0.509804, 0.309804, 0.419608)

[node name="DangerDetectorLeft" type="RayCast2D" parent="."]
position = Vector2(-21, 0)
target_position = Vector2(0, 18)
collision_mask = 9
hit_from_inside = true

[node name="DangerDetectorRight" type="RayCast2D" parent="."]
position = Vector2(15, 0)
target_position = Vector2(0, 18)
collision_mask = 9
hit_from_inside = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lydco")
}

[connection signal="chase_began" from="AttackBoxComponent" to="." method="_on_attack_box_component_chase_began"]
[connection signal="chase_ended" from="AttackBoxComponent" to="." method="_on_attack_box_component_chase_ended"]
